<resources>
    <string name="app_name">MadProject</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">abc@d.com</string>
    <string name="hint_phone">+94772164864</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_phone">Enter Valid Phone Number</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registation Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Deos Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
</resources>
