<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="524dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="145dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="689dp"
        android:text="Pizza Mat"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/fugaz_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="94dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logo1p" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012"
        app:srcCompat="@drawable/list" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="411dp"
        android:layout_height="94dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main1" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="First Name *"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint_fname"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="Last Name *"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/lName"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/hint_lname"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="Phone *"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="Email *"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <EditText
        android:id="@+id/email"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="Password *"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Confirm Password *"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827" />

    <EditText
        android:id="@+id/cnfpass"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:password="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regbtn"
        android:layout_width="332dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/text_register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="3dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/regbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/LoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_already_member"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />


</androidx.constraintlayout.widget.ConstraintLayout>